<resources>
    <string name="app_name">Mia Accounts</string>
    <string name="login_login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_token">Token</string>
    <string name="or">or</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_failed">Invalid email or password</string>
    <string name="login_successful">Login successful</string>
    <string name="sign_up_invalid_token">Invalid token</string>
    <string name="sign_up_successful">You have been signed up</string>
    <string name="sign_up_invalid_email">Email is invalid</string>
</resources>
