<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/login_sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>
